--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
-	"name": "ditbit",
-	"version": "1.0.0",
-	"description" : "app to manage money",
-	"author" : "Leonetti Vito <veleonetti@gmail.com>",
-	"contributors" : [],
-  	"dependencies" : [],
-  	"repository" : {"type": "git", "url": "https://github.com/levieu/ditbit.git"},
-	"main" : "ditbit.js"
+  "name": "ditbit",
+  "version": "1.0.0",
+  "description": "app to manage money",
+  "author": "Leonetti Vito <veleonetti@gmail.com>",
+  "private": "true",
+  "contributors": [],
+  "dependencies": {
+	"express": "*",
+	"jade": "1.1.5",
+	"mongodb": "1.3.23",
+	"body-parser": "~1.14.1"
+  },
+  "repository": {
+	"type": "git",
+	"url": "https://github.com/levieu/ditbit.git"
+  },
+  "main": "ditbit.js"
 }
