--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"express": "*",
 	"jade": "1.1.5",
 	"mongodb": "1.3.23",
-	"body-parser": "~1.14.1"
+	"body-parser": "~1.14.1",
+    "mongoose": "*"
   },
   "repository": {
 	"type": "git",
