--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 	"jade": "1.1.5",
 	"mongodb": "1.3.23",
 	"body-parser": "~1.14.1",
-    "mongoose": "*"
+    "mongoose": "*",
+    "express-jwt": "~3.0.0",
+    "jsonwebtoken": "~5.0.0"
   },
   "repository": {
 	"type": "git",
